# Just1RCe

./: .gitignore  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  Doxyfile.in  Makefile  README.md  config.h.in  main.cc
.github/workflows/: cmake_build.yml  cppcheck.yml  cpplint.yml
docs/Architecture/: Channel.md  Client.md  Command.md  Commands.md  Irssi.md
docs/GUIDES/: clang-format_guide.md  cppcheck_guide.md  cpplint_guide.md
includes/: channel.h  client.h  client_mode.h  command_handler.h  command_mapping.h  config.h  context_holder.h  dbcontext.h  ft_optional.h  in_memory_db_context.h  lexer.h  math.h  numeric.h  parse.h  parser.h  response_generator.h  service.h  tcp_socket.h  tokenizer.h
includes/commands/: JoinCommandHandler.h  invite_command_handler.h  join_command_handler.h  kick_command_handler.h  mode_command_handler.h  nickCommandHandler.h  nick_command_handler.h  part_command_handler.h  passCommandHandler.h  pass_command_handler.h  pingCommandHandler.h  ping_command_handler.h  privmsg_command_handler.h  quitCommandHandler.h  quit_command_handler.h  topic_command_handler.h  userCommandHandler.h  user_command_handler.h
scripts/: cppcheck-htmlreport  cppcheck.sh  cpplint.sh  gtest-to-html.xsl
srcs/: client.cc  client.h  client_mode.cc  client_network_info.cc  main.cc  math.cc  tcp_socket.cc
srcs/channel/: channel.cc  channel_invite_list.cc  channel_mode.cc  channel_user.cc
srcs/client/: Client_auth.cc  client.cc  client_get_messages.cc  client_mode.cc  client_network_info.cc  client_send_message.cc
srcs/command_mapping/: command_mapping.cc
srcs/commands/: JoinCommandHandler.cc  NickCommandHandler.cc  PingCommandHandler.cc  QuitCommandHandler.cc  UserCommandHandler.cc  invite_command_handler.cc  join_command_handler.cc  kick_command_handler.cc  mode_command_handler.cc  nick_command_handler.cc  part_command_handler.cc  passCommandHandler.cc  pass_command_handler.cc  ping_command_handler.cc  privmsg_command_handler.cc  quit_command_handler.cc  topic_command_handler.cc  user_command_handler.cc
srcs/commands/modes/: mode_i.cc  mode_k.cc  mode_l.cc  mode_o.cc  mode_t.cc
srcs/context_holder/: context_holder.cc
srcs/in_memory_db_context/: channel_table.cc  client_mode_table.cc  client_table.cc  in_memory_db_context.cc  mapping_table.cc
srcs/parse/: create_token_stream.cc  lexer.cc  parse_token_stream.cc  parser.cc
srcs/responser/: response_generator.cc
srcs/service/: event_handler.cc  event_utility.cc  run_irc_server.cc
srcs/socket/: tcp_socket.cc
srcs/tokenizer/: parser.cc  tokenizer.cc
tests/: test_client_for_commands-1.cc  test_client_for_commands.cc  test_client_for_commands_codespace_realtime.cc  test_client_for_commands_mac.cc  test_client_for_commands_mac_realtime-1.cc  test_client_for_commands_mac_realtime.cc  test_gtest.cc  test_gtest_copy.cc  test_main.cc  test_optional.cc  test_server_for_commands-1.cc  test_server_for_commands.cc
tests/test_server/: docker-compose.yml  ngircd.conf
tests/test_server/config/: ngircd.conf
